fix: update default slider colors and adjust box-shadow for better visibility

--- a/src/ui/stylesheets/app-components.css
+++ b/src/ui/stylesheets/app-components.css
@@ -24,7 +24,7 @@ div.slider {
 div.slider .slider__range {
   position: relative;
   flex: 1 1 auto;
-  box-shadow: inset 0 0 0 1px var(--figma-color-border-disabled-strong);
+  box-shadow: inset 0 0 0 1px var(--color-foreground-secondary);
   border-radius: var(--border-radius-large);
   height: var(--size-xsmall);
 }
